# HeartRateSample

./: CMakeLists.txt  README.md
src/: CameraUtilities.cpp  CameraUtilities.h  heartratesample.cpp  heartratesample.h  heartratesample.qrc  heartratesample.ui  loadingscreen.ui  main.cpp
